--- a/src/index.css
+++ b/src/index.css
@@ -224,3 +224,126 @@
       -2.6em 0em 0 0em rgba(255, 255, 255, 0.7), -1.8em -1.8em 0 0em #ffffff;
   }
 }
+
+.parallax-outer {
+  overflow: hidden;
+}
+
+.parallax {
+  height: 110vh;
+  width: 100%;
+  position: relative;
+}
+
+.parallax img {
+  position: absolute;
+}
+
+
+.mountain-3,
+.mountain-2,
+.mountain-1 {
+  width: 100%;
+  bottom: 0;
+  z-index: 3;
+}
+
+.mountain-2 {
+  bottom: 20px;
+  z-index: 2;
+}
+
+.mountain-1 {
+  bottom: 40px;
+  z-index: 1;
+}
+
+.sun {
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 40%;
+}
+
+.clouds-left {
+  left: 0;
+  width: 20%;
+}
+
+.clouds-right {
+  right: 0;
+  width: 20%;
+}
+
+.clouds-bottom {
+  bottom: 0px;
+  width: 100%;
+}
+
+.stars {
+  top: -550px;
+  left: 0;
+  width: 100%;
+}
+
+.copy {
+  position: absolute;
+  bottom: 0%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 0;
+  color: var(--secondaryColor);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  opacity: 0;
+}
+
+.copy h1 {
+  font-size: 6rem;
+}
+.copy h5 {
+  font-size: 1rem;
+}
+
+.copy span {
+  background-color: var(--secondaryColor);
+  color: var(--primaryColor);
+  padding: 1rem;
+  font-weight: 800;
+  border-radius: 0.5rem;
+  opacity: 0;
+}
+.copy1 {
+  position: absolute;
+  bottom: 0%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 0;
+  color: var(--secondaryColor);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  opacity: 0;
+}
+.copy1 h5 {
+  font-size: 2rem;
+}
+
+.about {
+  color: var(--secondaryColor);
+  padding-left: 10%;
+  padding-bottom: 20%;
+}
+
+.about h2 {
+  color: var(--secondaryColor);
+  font-size: 5rem;
+}
+
+.about p {
+  margin-top: 20px;
+  width: 50%;
+}
